Fixed spacing of health bar

--- a/game/public/css/card.css
+++ b/game/public/css/card.css
@@ -1,7 +1,7 @@
 .card-wrapper {
     width: 100%;
     cursor: pointer;
-    padding: 14px;
+    padding: 0.5rem;
 }
 
 .card {
@@ -26,6 +26,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 8px;
+    overflow: hidden;
 }
 
 .card-front {
