--- a/game/public/css/style.css
+++ b/game/public/css/style.css
@@ -22,14 +22,15 @@
         1fr
         min(100%, calc(100vh - 1rem - 100px))
         1fr;
-    grid-template-rows: 40px min(100%, calc(100vh - 1rem - 100px)) 0px;
-    padding: 10px;
+    grid-template-rows: 40px auto 0px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 /* Grid items */
 #page_content>div {
     background: #60435F;
-    border-radius: 20px;
+    border-radius: 8px;
     box-shadow: #333333 0px 4px 8px;
 
     display: flex;
@@ -52,6 +53,7 @@
     align-self: center;
 
     width: 100%;
+    padding: 0.5rem;
     /*max-width: min(100%, 100vh - 1rem - 100px);*/
 }
 
@@ -69,4 +71,6 @@
     border-radius: 80px;
     justify-self: center;
     align-self: end;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
